--- a/TempCalculator/app/src/main/AndroidManifest.xml
+++ b/TempCalculator/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/temperature"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/temperature"
         android:supportsRtl="true"
         android:theme="@style/Theme.TempCalculator">
         <activity
@@ -19,5 +19,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
